made some minor changes to css due to a previous bug that allowed horizontal scrolling. All tested good.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,11 +26,11 @@
   font-weight: 300;
   text-overflow: ellipsis;
   width: inherit;
-  margin: 1rem;
+  margin:0;
 }
 
 #pac-input: focus {
-  border-color: #4d90fe;
+  border-color: black;
 }
 
 #mapquery{
